# pheval.phenogenius

./: .gitignore  404.html  CONTRIBUTING.md  README.md  config.yaml  docs_gen.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: deploy-docs.yml  qc.yml
api/pheval_phenogenius/cli/: index.html
api/pheval_phenogenius/main/: index.html
api/pheval_phenogenius/post_process/post_process/: index.html
api/pheval_phenogenius/post_process/post_process_results_format/: index.html
api/pheval_phenogenius/run/prepare_commands/: index.html
api/pheval_phenogenius/run/run/: index.html
api/pheval_phenogenius/runner/: index.html
docs/: index.md
search/: search_index.json
src/pheval_phenogenius/: __init__.py  cli.py  runner.py
src/pheval_phenogenius/post_process/: post_process.py  post_process_results_format.py
src/pheval_phenogenius/run/: prepare_commands.py  run.py
tests/: __init__.py  demo_test.py
